Fix navbar alignment issues
- Removed position: relative from #header and .navbar in mobile CSS
- This was causing navbar alignment problems with the logo/title
- Mobile nav toggle positioning maintained with absolute positioning
- Header should now properly align with title on all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,14 +441,6 @@ h6 {
   .navbar ul {
     display: none;
   }
-  
-  #header {
-    position: relative;
-  }
-  
-  .navbar {
-    position: relative;
-  }
 }
 
 .navbar-mobile {
